--- a/package.json
+++ b/package.json
@@ -1,22 +1,19 @@
 {
-  "name": "create-react-app",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "react": "^16.6.1",
-    "react-dom": "^16.6.1",
-    "react-scripts": "2.1.1"
-  },
-  "scripts": {
-    "dev": "BROWSER=none react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+	"name": "create-react-app",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"plotly.js": "^1.58.4",
+		"react": "^16.6.1",
+		"react-dom": "^16.6.1",
+		"react-plotly.js": "^2.5.1",
+		"react-scripts": "2.1.1"
+	},
+	"scripts": {
+		"dev": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
+	},
+	"browserslist": [ ">0.2%", "not dead", "not ie <= 11", "not op_mini all" ]
 }
