sort ammo in caliber by pen, add log for update ammo api rejection

--- a/.github/workflows/update_ammo.yaml
+++ b/.github/workflows/update_ammo.yaml
@@ -10,5 +10,5 @@ jobs:
       - name: Call the API to update data store
         run: |
           curl --request GET \
-          --url 'https://tarkovammo3d.com/api/update_ammo' \
+          --url 'https://www.tarkovammo3d.com/api/update_ammo' \
           --header 'X-Update-Ammo-API-Key: ${{ secrets.UPDATE_AMMO_API_KEY }}'
