--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"react-bootstrap": "^1.5.2",
 		"react-dom": "^16.6.1",
 		"react-plotly.js": "^2.5.1",
+		"react-router-dom": "^5.2.0",
 		"react-scripts": "2.1.1"
 	},
 	"scripts": {
