--- a/.github/workflows/update_ammo.yaml
+++ b/.github/workflows/update_ammo.yaml
@@ -1,7 +1,7 @@
 name: update-ammo-cron
 on:
   schedule:
-    - cron: '*/60 * * * *'
+    - cron: '0 8 * * *'
 jobs:
   cron:
     runs-on: ubuntu-latest
