--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"private": true,
 	"dependencies": {
 		"bootstrap": "^4.6.0",
+		"mongodb": "^4.0.0",
 		"plotly.js": "^1.58.4",
 		"react": "^16.6.1",
 		"react-bootstrap": "^1.5.2",
